Add new email design

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -18,8 +18,9 @@
       }
 
       body {
-        background-color: #f6f6f6;
-        font-family: sans-serif;
+        background-color: #101727;
+        color: #fff;
+        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
         -webkit-font-smoothing: antialiased;
         font-size: 14px;
         line-height: 1.4;
@@ -35,7 +36,7 @@
         mso-table-rspace: 0pt;
         width: 100%; }
         table td {
-          font-family: sans-serif;
+          font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
           font-size: 14px;
           vertical-align: top;
       }
@@ -45,8 +46,9 @@
       ------------------------------------- */
 
       .body {
-        background-color: #f6f6f6;
+        background-color: #101727;
         width: 100%;
+        padding: 8px;
       }
 
       /* Set a max-width, and make it display as block so it will automatically stretch to that width, but will also shrink down on a phone or something */
@@ -72,14 +74,14 @@
           HEADER, FOOTER, MAIN
       ------------------------------------- */
       .main {
-        background: #ffffff;
-        border-radius: 3px;
+        background: #101727;
         width: 100%;
+        box-shadow: 0 40px 50px -50px rgb(0, 0, 0, 0.25);
       }
 
       .wrapper {
         box-sizing: border-box;
-        padding: 20px;
+        padding: 40px 0 24px;
       }
 
       .content-block {
@@ -89,7 +91,7 @@
 
       .footer {
         clear: both;
-        margin-top: 10px;
+        margin-top: 24px;
         text-align: center;
         width: 100%;
       }
@@ -97,7 +99,6 @@
         .footer p,
         .footer span,
         .footer a {
-          color: #999999;
           font-size: 12px;
           text-align: center;
       }
@@ -109,9 +110,9 @@
       h2,
       h3,
       h4 {
-        color: #000000;
-        font-family: sans-serif;
-        font-weight: 400;
+        color: #fff;
+        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
+        font-weight: bold;
         line-height: 1.4;
         margin: 0;
         margin-bottom: 10px;
@@ -119,13 +120,17 @@
 
       h1 {
         font-size: 24px;
-        font-weight: 300;
+      }
+
+      p {
+        line-height: 26px;
+        color: #d8d8d8;
       }
 
       p,
       ul,
       ol {
-        font-family: sans-serif;
+        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
         font-size: 14px;
         font-weight: normal;
         margin: 0;
@@ -139,8 +144,12 @@
       }
 
       a {
-        color: #1c70f5;
+        color: #61b6ff;
         text-decoration: underline;
+      }
+
+      a:hover {
+        color: #81c7ff;
       }
 
       /* -------------------------------------
@@ -172,7 +181,6 @@
           margin: 0;
           padding: 12px 25px;
           text-decoration: none;
-          text-transform: capitalize;
       }
 
       .btn-primary table td {
@@ -327,7 +335,9 @@
           border-color: #327ef6 !important;
         }
       }
-
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
     </style>
   </head>
   <body class="">
@@ -338,7 +348,9 @@
         <td>&nbsp;</td>
         <td class="container">
           <div class="content">
-            <img src="<%= asset_path("black_logo_with_text.png") %>" alt="Logo" width="179.25" height="54" border="0" style="margin-bottom: 16px; border:0; outline:none; text-decoration:none; display:block;">
+            <div style="padding: 10px 10px 0 10px;">
+              <img src="<%= asset_path("white_logo_with_text.svg") %>" alt="Logo" width="134.4375" height="40.5" border="0" style="margin-bottom: 16px; border:0; outline:none; text-decoration:none; display:block;">
+            </div>
             <!-- START CENTERED WHITE CONTAINER -->
             <table role="presentation" class="main">
 
@@ -349,6 +361,7 @@
                     <tr>
                       <td>
                         <%= yield %>
+                        <p>Your Texterify Team</p>
                       </td>
                     </tr>
                   </table>
@@ -364,9 +377,17 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">Texterify</span>
-                    <br>
-                    <a href="https://texterify.com">texterify.com</a>
+                    <div class="apple-link">&copy; Texterify, aaa – all about apps GmbH, Siebenbrunnengasse 17 / TOP 3, A-1050 Wien</div>
+                    <div style="margin-top: 4px;">
+                      Visit <a href="https://texterify.com">texterify.com</a> for more information.
+                    </div>
+                    <div style="margin-top: 4px;">
+                      Questions? Contact us by sending an email to <a href="mailto:support@texterify.com">support@texterify.com</a>.
+                    </div>
+                    <div style="margin-top: 4px;">Coded with love in beautiful Vienna.</div>
+                    <p style="font-size: 10px; line-height: 14px; margin-top: 40px">
+                      This is an automatically sent email by Texterify.
+                    </p>
                   </td>
                 </tr>
               </table>
