--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,8 @@
 <% content_for :title do %>Reset password instructions<% end %>
 <% content_for :preheader do %>Instructions to reset your password<% end %>
 
-<h1><%= t(:hello).capitalize %> <%= @resource.username %>!</h1>
+<h1>Reset your password</h1>
+<p><%= t(:hello).capitalize %> <%= @resource.username %>,</p>
 <p><%= t '.request_reset_link_msg' %></p>
 
 <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
