Update email template

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -107,6 +107,8 @@
 
       .footer p {
         margin: 0;
+        color: #ddd !important;
+        line-height: 18px;
       }
 
       /* -------------------------------------
@@ -150,12 +152,12 @@
       }
 
       a {
-        color: #61b6ff;
+        color: #61b6ff !important;
         text-decoration: underline;
       }
 
       a:hover {
-        color: #81c7ff;
+        color: #81c7ff !important;
       }
 
       /* -------------------------------------
@@ -391,7 +393,7 @@
                       Questions? Contact us by sending an email to <a href="mailto:support@texterify.com">support@texterify.com</a>.
                     </p>
                     <p>Coded with love in beautiful Vienna.</p>
-                    <p style="font-size: 10px; line-height: 14px; margin-top: 40px">
+                    <p style="font-size: 10px; line-height: 14px; margin-top: 24px">
                       This is an automatically sent email by Texterify.
                     </p>
                   </td>
