Fix button color

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -181,7 +181,7 @@
           border: solid 1px #1c70f5;
           border-radius: 5px;
           box-sizing: border-box;
-          color: #1c70f5;
+          color: #1c70f5 !important;
           cursor: pointer;
           display: inline-block;
           font-size: 14px;
@@ -198,7 +198,7 @@
       .btn-primary a {
         background-color: #1c70f5;
         border-color: #1c70f5;
-        color: #ffffff;
+        color: #ffffff !important;
       }
 
       /* -------------------------------------
