--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -357,7 +357,7 @@
         <td class="container">
           <div class="content">
             <div style="padding: 10px 10px 0 10px;">
-              <img src="<%= asset_path("white_logo_with_text.png") %>" alt="Logo" width="134.4375" height="40.5" border="0" style="margin-bottom: 16px; border:0; outline:none; text-decoration:none; display:block;">
+              <img src="<%= asset_path("logo_white_text.png") %>" alt="Logo" height="40" border="0" style="margin-bottom: 16px; border:0; outline:none; text-decoration:none; display:block;">
             </div>
             <!-- START CENTERED WHITE CONTAINER -->
             <table role="presentation" class="main">
