--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -1,353 +1,351 @@
 .dark-theme {
-  @import '~antd/dist/antd.dark.less';
+    @import "~antd/dist/antd.dark.less";
 
-  body {
-    color: #fff;
-    background: var(--dark-color);
-  }
-
-  h1, h2, h3, h4, h5, h6 {
-    color: #fff;
-  }
-
-  a {
-    color: var(--blue-color-light);
-
-    &:hover {
-      color: var(--blue-color);
+    body {
+        color: #fff;
+        background: var(--dark-color);
     }
-  }
 
-  // Fix wrong flex direction of main layout.
-  .ant-layout.ant-layout-has-sider {
-    flex-direction: row;
-  }
-
-  .ant-menu, .ant-menu-submenu-popup > .ant-menu {
-    background: var(--background-color);
-  }
-
-  // Change selected menu item background color.
-  .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-    background-color: rgba(255, 255, 255, 0.05);
-  }
-
-  // Change select item background color.
-  .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
-    background-color: #2a2a2a;
-  }
-
-  .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
-    color: rgba(151, 151, 151, 0.65);
-    background-color: #2a2a2a;
-  }
-
-  // Set content area background.
-  .ant-layout {
-    background: var(--background-color);
-  }
-
-  .ant-table {
-    background: transparent;
-  }
-
-  // Remove white hover background of empty tables.
-  .ant-table-tbody > tr.ant-table-placeholder:hover > td {
-    background: transparent;
-  }
-
-  tr.ant-table-expanded-row > td, tr.ant-table-expanded-row:hover > td {
-    background: none;
-  }
-
-  .ant-table-tbody > tr.ant-table-row-selected > td {
-    border-color: #303030;
-  }
-
-  .ant-table-thead > tr > th, .ant-table-tbody > tr.ant-table-row:hover > td {
-    background: rgba(255, 255, 255, 0.05);
-  }
-
-  // Fix hidden alert descriptions.
-  .ant-alert-description {
-    display: block;
-  }
-
-  .ant-alert-with-description .ant-alert-message {
-    color: inherit;
-  }
-
-  // Remove background color of collapse component.
-  .ant-collapse-borderless {
-    background-color: transparent;
-  }
-
-  .ant-collapse-borderless > .ant-collapse-item {
-    border-bottom-color: var(--border-color);
-  }
-
-  // Remove white background of sortable table columns.
-  td.ant-table-column-sort {
-    background: none;
-  }
-
-  // Fix arrow color.
-  .ant-popover-arrow {
-    border-top-color: #090b0f !important;
-    border-left-color: #090b0f !important;
-  }
-
-  // Sidebar collapse trigger styling.
-  .ant-layout-sider {
-    background: transparent;
-  }
-
-  .ant-layout-sider-trigger {
-    background: var(--background-color);
-    border-right: 1px solid var(--border-color);
-
-    &:hover, &:active {
-      color: var(--blue-color);
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: #fff;
     }
-  }
-
-  // Fix collapse header color.
-  .ant-collapse > .ant-collapse-item > .ant-collapse-header {
-    color: #fff;
-  }
-
-  .ant-collapse > .ant-collapse-item.ant-collapse-item-disabled > .ant-collapse-header {
-    color: rgba(255, 255, 255, 0.3);
-  }
-
-  // Fix progress bar status icon on the next line.
-  .ant-progress-show-info .ant-progress-outer {
-    margin-right: calc(-2em - 8px);
-    padding-right: calc(2em + 8px);
-  }
-
-  // Adjus list items separator.
-  .ant-list-split .ant-list-item {
-    border-bottom: 1px solid var(--border-color);
-
-    &:last-child {
-      border-bottom: none;
-    }
-  }
-
-  // Fix disabled select color.
-  .ant-select-disabled.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
-    background: none;
-    color: #434343;
-    border-color: var(--input-border-disabled-color);
-  }
-
-  // Fix tree hover and selected elements.
-  .ant-tree .ant-tree-node-content-wrapper:hover,
-  .ant-tree .ant-tree-node-content-wrapper.ant-tree-node-selected {
-    background: #1f1f1f;
-  }
-
-  .ant-typography code {
-    background: #303030;
-  }
-
-  // Fix tabs design.
-  .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn,
-  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
-    background: transparent;
-    border-color: var(--border-color);
-    color: #fff;
-  }
-
-  // Fix divider styling.
-  .ant-divider-horizontal.ant-divider-with-text {
-    color: #777;
-  }
-
-  .ant-divider-horizontal.ant-divider-with-text::before, .ant-divider-horizontal.ant-divider-with-text::after {
-    border-color: var(--border-color);
-  }
-
-  .ant-progress-success-bg, .ant-progress-bg {
-    background: var(--blue-color);
-  }
-
-  // Fix checkbox in table header not centered.
-  table tr th.ant-table-selection-column, table tr td.ant-table-selection-column {
-    text-align: center;
-  }
-
-  // Fix checkbox color
-  .ant-checkbox-wrapper:hover .ant-checkbox-inner,
-  .ant-checkbox:hover .ant-checkbox-inner,
-  .ant-checkbox-input:focus + .ant-checkbox-inner {
-    border-color: var(--blue-color);
-  }
-
-  .ant-checkbox-checked .ant-checkbox-inner {
-    background: var(--blue-color);
-    border-color: var(--blue-color);
-  }
-
-  .ant-checkbox-checked::after {
-    border-color: var(--blue-color);
-  }
-
-  // Fix copy icon
-  .ant-typography-expand:not(.ant-typography-copy-success),
-  .ant-typography-edit:not(.ant-typography-copy-success),
-  .ant-typography-copy:not(.ant-typography-copy-success) {
-    color: var(--blue-color-light);
-
-    &:hover {
-      color: var(--blue-color);
-    }
-  }
-
-  // Fix timeline
-  .ant-timeline-item-head-blue {
-    color: var(--blue-color);
-    border-color: var(--blue-color);
-  }
-
-  // Fix select
-  .ant-select:not(.ant-select-disabled) .ant-select-selector {
-    color: rgba(255, 255, 255, 0.65);
-    border-color: var(--input-border-color);
-  }
-
-  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
-    border-color: var(--input-border-hover-color);
-  }
-
-  .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-    background-color: transparent;
-  }
-
-  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
-    border-color: var(--input-border-hover-color);
-    color: var(--input-border-hover-color);
-  }
-
-  .ant-select-focused.ant-select-single:not(.ant-select-customize-input):not(.ant-select-disabled) .ant-select-selector {
-    border-color: var(--input-border-focus-color);
-    color: var(--input-border-focus-color);
-  }
-
-  // Fix erros
-  .ant-form-item-has-error .ant-form-item-explain, .ant-form-item-has-error .ant-form-item-split {
-    color: #ff4d4f;
-  }
-
-  .ant-form-item-has-error .ant-input,
-  .ant-form-item-has-error .ant-input-affix-wrapper,
-  .ant-form-item-has-error .ant-input:hover,
-  .ant-form-item-has-error .ant-input-group-addon,
-  .ant-form-item-has-error .ant-input-affix-wrapper:hover {
-    border-color: #ff4d4f;
-  }
-
-  .ant-empty-normal {
-    color: rgba(255, 255, 255, 0.7);
-  }
-
-  // Fix slider
-  .ant-slider-track, .ant-slider:hover .ant-slider-track {
-    background: var(--blue-color);
-  }
-
-  .ant-slider-handle {
-    border-color: var(--blue-color) !important;
-  }
-
-  .ant-input {
-    color: #fff;
-  }
-
-  .ant-tag-checkable:not(.ant-tag-checkable-checked):hover {
-    color: #fff;
-  }
-
-  .ant-tag:hover {
-    opacity: 1;
-  }
-
-  .ant-pagination-item {
-    a {
-      color: rgba(255, 255, 255, 0.65);
-    }
-  }
-
-  .ant-pagination-item-active {
-    border-color: var(--blue-color);
 
     a {
-      color: var(--blue-color);
+        color: var(--blue-color-light);
+
+        &:hover {
+            color: var(--blue-color);
+        }
     }
-  }
 
-  .ant-alert-info .ant-alert-icon {
-    color: var(--blue-color);
-  }
-
-
-  // Fix button color
-  .ant-btn-dangerous {
-    color: #cc3d3f;
-    border-color: #cc3d3f;
-  }
-
-  .ant-btn-dangerous.ant-btn-primary {
-    background: #cc3d3f;
-    color: #fff;
-    border-color: #cc3d3f;
-
-    &:hover {
-      background: #dd4345;
-      border-color: #dd4345;
+    .ant-menu,
+    .ant-menu-submenu-popup > .ant-menu {
+        background: var(--background-color);
     }
-  }
 
-  .ant-btn-dangerous:hover,
-  .ant-btn-dangerous:focus {
-    color: #ff4d4f;
-    border-color: #ff4d4f;
-  }
-
-  .ant-alert {
-    color: #fff;
-
-    p {
-      color: #fff;
+    // Change selected menu item background color.
+    .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
+        background-color: rgba(255, 255, 255, 0.05);
     }
-  }
 
-  .ant-menu-inline, .ant-menu-inline-collapsed {
-    border-right: 1px solid var(--border-color);
-  }
-
-  .ant-modal-header, .ant-modal-content {
-    background: var(--background-color);
-  }
-
-  .ant-breadcrumb > span:last-child {
-    color: #fff;
-  }
-
-  .ant-card {
-    background: var(--background-color);
-    border: 1px solid var(--border-color);
-    color: var(--full-color);
-
-    .ant-card-head {
-      background: var(--background-color);
+    // Change select item background color.
+    .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
+        background-color: #2a2a2a;
     }
-  }
 
-  .ant-statistic.disabled .ant-statistic-content {
-    color: rgba(255, 255, 255, 0.25) !important;
-  }
+    .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+        color: rgba(151, 151, 151, 0.65);
+        background-color: #2a2a2a;
+    }
 
-  @import 'antd-input.less';
+    // Set content area background.
+    .ant-layout {
+        background: var(--background-color);
+    }
+
+    .ant-table {
+        background: transparent;
+    }
+
+    // Remove white hover background of empty tables.
+    .ant-table-tbody > tr.ant-table-placeholder:hover > td {
+        background: transparent;
+    }
+
+    tr.ant-table-expanded-row > td,
+    tr.ant-table-expanded-row:hover > td {
+        background: none;
+    }
+
+    .ant-table-tbody > tr.ant-table-row-selected > td {
+        border-color: #303030;
+    }
+
+    .ant-table-thead > tr > th,
+    .ant-table-tbody > tr.ant-table-row:hover > td {
+        background: rgba(255, 255, 255, 0.05);
+    }
+
+    .ant-alert-with-description .ant-alert-message {
+        color: inherit;
+    }
+
+    // Remove background color of collapse component.
+    .ant-collapse-borderless {
+        background-color: transparent;
+    }
+
+    .ant-collapse-borderless > .ant-collapse-item {
+        border-bottom-color: var(--border-color);
+    }
+
+    // Remove white background of sortable table columns.
+    td.ant-table-column-sort {
+        background: none;
+    }
+
+    // Fix arrow color.
+    .ant-popover-arrow {
+        border-top-color: #090b0f !important;
+        border-left-color: #090b0f !important;
+    }
+
+    // Sidebar collapse trigger styling.
+    .ant-layout-sider {
+        background: transparent;
+    }
+
+    .ant-layout-sider-trigger {
+        background: var(--background-color);
+        border-right: 1px solid var(--border-color);
+
+        &:hover,
+        &:active {
+            color: var(--blue-color);
+        }
+    }
+
+    // Fix collapse header color.
+    .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+        color: #fff;
+    }
+
+    .ant-collapse > .ant-collapse-item.ant-collapse-item-disabled > .ant-collapse-header {
+        color: rgba(255, 255, 255, 0.3);
+    }
+
+    // Fix progress bar status icon on the next line.
+    .ant-progress-show-info .ant-progress-outer {
+        margin-right: calc(-2em - 8px);
+        padding-right: calc(2em + 8px);
+    }
+
+    // Adjus list items separator.
+    .ant-list-split .ant-list-item {
+        border-bottom: 1px solid var(--border-color);
+
+        &:last-child {
+            border-bottom: none;
+        }
+    }
+
+    // Fix disabled select color.
+    .ant-select-disabled.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+        background: none;
+        color: #434343;
+        border-color: var(--input-border-disabled-color);
+    }
+
+    // Fix tree hover and selected elements.
+    .ant-tree .ant-tree-node-content-wrapper:hover,
+    .ant-tree .ant-tree-node-content-wrapper.ant-tree-node-selected {
+        background: #1f1f1f;
+    }
+
+    .ant-typography code {
+        background: #303030;
+    }
+
+    // Fix tabs design.
+    .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn,
+    .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
+        background: transparent;
+        border-color: var(--border-color);
+        color: #fff;
+    }
+
+    // Fix divider styling.
+    .ant-divider-horizontal.ant-divider-with-text {
+        color: #777;
+    }
+
+    .ant-divider-horizontal.ant-divider-with-text::before,
+    .ant-divider-horizontal.ant-divider-with-text::after {
+        border-color: var(--border-color);
+    }
+
+    .ant-progress-success-bg,
+    .ant-progress-bg {
+        background: var(--blue-color);
+    }
+
+    // Fix checkbox color
+    .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+    .ant-checkbox:hover .ant-checkbox-inner,
+    .ant-checkbox-input:focus + .ant-checkbox-inner {
+        border-color: var(--blue-color);
+    }
+
+    .ant-checkbox-checked .ant-checkbox-inner {
+        background: var(--blue-color);
+        border-color: var(--blue-color);
+    }
+
+    .ant-checkbox-checked::after {
+        border-color: var(--blue-color);
+    }
+
+    // Fix copy icon
+    .ant-typography-expand:not(.ant-typography-copy-success),
+    .ant-typography-edit:not(.ant-typography-copy-success),
+    .ant-typography-copy:not(.ant-typography-copy-success) {
+        color: var(--blue-color-light);
+
+        &:hover {
+            color: var(--blue-color);
+        }
+    }
+
+    // Fix timeline
+    .ant-timeline-item-head-blue {
+        color: var(--blue-color);
+        border-color: var(--blue-color);
+    }
+
+    // Fix select
+    .ant-select:not(.ant-select-disabled) .ant-select-selector {
+        color: rgba(255, 255, 255, 0.65);
+        border-color: var(--input-border-color);
+    }
+
+    .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+        border-color: var(--input-border-hover-color);
+    }
+
+    .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+        background-color: transparent;
+    }
+
+    .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+        border-color: var(--input-border-hover-color);
+        color: var(--input-border-hover-color);
+    }
+
+    .ant-select-focused.ant-select-single:not(.ant-select-customize-input):not(.ant-select-disabled)
+        .ant-select-selector {
+        border-color: var(--input-border-focus-color);
+        color: var(--input-border-focus-color);
+    }
+
+    // Fix erros
+    .ant-form-item-has-error .ant-form-item-explain,
+    .ant-form-item-has-error .ant-form-item-split {
+        color: #ff4d4f;
+    }
+
+    .ant-form-item-has-error .ant-input,
+    .ant-form-item-has-error .ant-input-affix-wrapper,
+    .ant-form-item-has-error .ant-input:hover,
+    .ant-form-item-has-error .ant-input-group-addon,
+    .ant-form-item-has-error .ant-input-affix-wrapper:hover {
+        border-color: #ff4d4f;
+    }
+
+    .ant-empty-normal {
+        color: rgba(255, 255, 255, 0.7);
+    }
+
+    // Fix slider
+    .ant-slider-track,
+    .ant-slider:hover .ant-slider-track {
+        background: var(--blue-color);
+    }
+
+    .ant-slider-handle {
+        border-color: var(--blue-color) !important;
+    }
+
+    .ant-input {
+        color: #fff;
+    }
+
+    .ant-tag-checkable:not(.ant-tag-checkable-checked):hover {
+        color: #fff;
+    }
+
+    .ant-tag:hover {
+        opacity: 1;
+    }
+
+    .ant-pagination-item {
+        a {
+            color: rgba(255, 255, 255, 0.65);
+        }
+    }
+
+    .ant-pagination-item-active {
+        border-color: var(--blue-color);
+
+        a {
+            color: var(--blue-color);
+        }
+    }
+
+    .ant-alert-info .ant-alert-icon {
+        color: var(--blue-color);
+    }
+
+    // Fix button color
+    .ant-btn-dangerous {
+        color: #cc3d3f;
+        border-color: #cc3d3f;
+    }
+
+    .ant-btn-dangerous.ant-btn-primary {
+        background: #cc3d3f;
+        color: #fff;
+        border-color: #cc3d3f;
+
+        &:hover {
+            background: #dd4345;
+            border-color: #dd4345;
+        }
+    }
+
+    .ant-btn-dangerous:hover,
+    .ant-btn-dangerous:focus {
+        color: #ff4d4f;
+        border-color: #ff4d4f;
+    }
+
+    .ant-alert {
+        color: #fff;
+
+        p {
+            color: #fff;
+        }
+    }
+
+    .ant-menu-inline,
+    .ant-menu-inline-collapsed {
+        border-right: 1px solid var(--border-color);
+    }
+
+    .ant-modal-header,
+    .ant-modal-content {
+        background: var(--background-color);
+    }
+
+    .ant-breadcrumb > span:last-child {
+        color: #fff;
+    }
+
+    .ant-card {
+        background: var(--background-color);
+        border: 1px solid var(--border-color);
+        color: var(--full-color);
+
+        .ant-card-head {
+            background: var(--background-color);
+        }
+    }
+
+    .ant-statistic.disabled .ant-statistic-content {
+        color: rgba(255, 255, 255, 0.25) !important;
+    }
 }
