Fix button color for dark mode

--- a/app/assets/stylesheets/externals/antd-input.less
+++ b/app/assets/stylesheets/externals/antd-input.less
@@ -1,5 +1,5 @@
 // Fix input color
-&, .dark-theme {
+&, .dark-theme, .light-theme {
     // :hover
     .ant-input:hover,
     .ant-input-search .ant-input:hover,
