--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -1,5 +1,6 @@
 @import "~antd/dist/antd.less";
 @import "antd-input.less";
+@import "antd-button.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
