Fix initial loading of machine translations

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -205,7 +205,7 @@
   }
 
   .ant-progress-status-success .ant-progress-bg {
-    background-color: #52c41a;
+    background-color: var(--color-success);
   }
 
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
