--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -16,6 +16,7 @@
   --input-border-hover-color: #6993ff;
   --input-border-focus-color: #568aea;
   --input-border-disabled-color: #d9d9d9;
+  --color-success: #52c41a;
 }
 
 .dark-theme {
