Fix popover design

--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -2,6 +2,7 @@
 @import "antd-input.less";
 @import "antd-button.less";
 @import "antd-skeleton.less";
+@import "antd-popover.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
