--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -282,6 +282,14 @@
       font-size: 16px;
     }
 
+    &.big .ant-statistic-content {
+      font-size: 24px;
+    }
+
+    &.big .ant-statistic-title {
+      font-size: 18px;
+    }
+
     &.disabled {
       .ant-statistic-content {
         color: rgba(0, 0, 0, 0.45);
