Fix buggy sidebar after site reload

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,7 +2,7 @@
   --full-color: #000;
   --background-color: #fff;;
   --popover-background-color: #fff;
-  --dark-color: #080b0d;
+  --dark-color: #0c0e15;
   --border-color: #d9d9d9;
   --border-color-flashier: #777;
   --blue-color: #568aea;
