--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -3,6 +3,7 @@
 @import "antd-button.less";
 @import "antd-skeleton.less";
 @import "antd-popover.less";
+@import "antd-steps.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
