--- a/app/assets/stylesheets/externals/antd-steps.less
+++ b/app/assets/stylesheets/externals/antd-steps.less
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
   }
 
   .ant-steps-item-icon .ant-steps-icon {
