Improve issues and validations site

--- a/app/assets/stylesheets/externals/antd-skeleton.less
+++ b/app/assets/stylesheets/externals/antd-skeleton.less
@@ -2,4 +2,9 @@
     .skeleton-small .ant-skeleton-content .ant-skeleton-paragraph > li {
         height: 7px;
     }
+
+    .skeleton-no-padding .ant-skeleton-content .ant-skeleton-title {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 }
