--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -7,6 +7,7 @@
   --border-color-flashier: #777;
   --blue-color: #568aea;
   --highlight-color: #000;
+  --highlight-color-decent: #f0f0f0;
   --header-background-color: var(--dark-color);
   --primary-light-color: #e3eaff;
   --primary-btn-color: #1c70f5;
@@ -31,6 +32,7 @@
   --blue-color: #61b6ff;
   --blue-color-light: #61b6ffbf;
   --highlight-color: rgba(255, 255, 255, 0.85);
+  --highlight-color-decent: #ffffff0f;
   --primary-light-color: #111d3a;
   --primary-btn-color: #177ddc;
   --primary-btn-hover-color: #288eec;
