Improve setup site flow

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -4,6 +4,11 @@
   flex-grow: 1;
   min-height: 100%;
 
+  .ant-layout-content {
+    display: flex;
+    flex-direction: column;
+  }
+
   .ant-input-group {
     button:hover, button:focus {
       z-index: 1;
