Improve project validations

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -22,6 +22,7 @@
   --error-color: #cc3d3f;
   --error-color-hover: #ff4d4f;
   --color-success: #52c41a;
+  --color-warn: #e87800;
 }
 
 .dark-theme {
