--- a/app/assets/stylesheets/externals/antd-skeleton.less
+++ b/app/assets/stylesheets/externals/antd-skeleton.less
@@ -1,10 +1,17 @@
-&, .dark-theme, .light-theme {
-    .skeleton-small .ant-skeleton-content .ant-skeleton-paragraph > li {
-        height: 7px;
-    }
+&,
+.dark-theme,
+.light-theme {
+  .skeleton-small .ant-skeleton-content .ant-skeleton-paragraph > li {
+    height: 7px;
+  }
 
-    .skeleton-no-padding .ant-skeleton-content .ant-skeleton-title {
-        margin-top: 0;
-        margin-bottom: 0;
-    }
+  .skeleton-small-22 .ant-skeleton-content .ant-skeleton-paragraph > li,
+  .skeleton-small-22 .ant-skeleton-content .ant-skeleton-title {
+    height: 22px;
+  }
+
+  .skeleton-no-padding .ant-skeleton-content .ant-skeleton-title {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
