Update invite email text

--- a/app/views/user_mailer/invite.html.erb
+++ b/app/views/user_mailer/invite.html.erb
@@ -5,7 +5,7 @@
 
 <p>Hello,</p>
 
-<p>the user <b><%= @invite_from %></b> invited you to join Texterify and work together on translations.</p>
+<p>the user <b><%= @invite_from %></b> invited you to join Texterify and work together on their translations.</p>
 
 <% if @on_premise %>
     <p>This is an invite to an on-premise instance of Texterify which can be found on <a href="<%= root_url %>"><%= root_url %></a> and is not affiliated with the cloud version of Texterify over at <a href="https://texterify.com">texterify.com</a>.</p>
