--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -19,6 +19,7 @@
   --input-border-focus-color: #568aea;
   --input-border-disabled-color: #d9d9d9;
   --color-success: #52c41a;
+  --color-warn: #ff861d;
 }
 
 .dark-theme {
@@ -40,4 +41,5 @@
   --input-border-hover-color: var(--blue-color-light);
   --input-border-focus-color: var(--blue-color);
   --input-border-disabled-color: #434343;
+  --color-warn: #ff861d;
 }
