Add wordpress auth and contents table

--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -4,6 +4,7 @@
 @import "antd-skeleton.less";
 @import "antd-popover.less";
 @import "antd-steps.less";
+@import "antd-tabs.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
