--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -5,6 +5,7 @@
 @import "antd-popover.less";
 @import "antd-steps.less";
 @import "antd-tabs.less";
+@import "antd-menu.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
